2010-06-07  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* IsolatedStorageFile.cs: Remove and DeleteFile must report any
	error found in our System.IO classes as IsolatedStorageException.

2010-06-07  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* IsolatedStorageFile.cs: Update the exceptions we are firing in 4.0
	for CreateDirectory, GetFileNames and GetDirectoryNames.

2010-06-06  Carlos Alberto Cortez <calberto.cortez@gmail.com> 

	* IsolatedStorageSecurityState.cs: Make our .ctor internal - so we
	don't expose a public .ctor at all.

2010-06-06  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* IsolatedStorageFile.cs: Our 4.0 methods receiving a path should
	either return false or throw an IsolatedStorageException if the path
	refers to a directory outside the storage root.

2010-06-04  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* IsolatedStorageFile.cs: In CheckOpen check that the directory for
	the current storage is still valid, and throw an exception if needed.
	Also, in the static Remove method call Directory.Delete only if the
	directory exists, to avoid throwing an exception there.

2010-06-03  Sebastien Pouliot  <sebastien@ximian.com>

	* MoonIsolatedStorage.cs: Make class internal so we can access it
	from System.Window.dll to adjust quotas

2010-06-02  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* IsolatedStorageFile.cs: Check for empty paths and existing paths in
	both MoveFile and MoveDirectory, just as we do in CopyFile. Finally
	cover our IO calls with a try-catch block, so all the IOException
	instances are reported as IsolatedStorageException.

2010-05-31  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* IsolatedStorage.cs:
	* IsolatedStorageFile.cs: Implement AvailableFreeSpace, Quota,
	UsedSize and IncreaseQuotaTo.

2010-05-27  Carlos Alberto Cortez <calberto.cortez@gmail.com> 

	* IsolatedStorageFile.cs: Implement CopyFile.

2010-05-27  Carlos Alberto Cortez <calberto.cortez@gmail.com>
